# env-config

socket/: CMakeLists.txt
socket/include/: tcpsocket.hpp
socket/lib/: cli  srv
socket/src/: CMakeLists.txt  cli.cpp  client.cpp  server.cpp  srv.cpp
